--- a/3.2_SC.Rmd
+++ b/3.2_SC.Rmd
@@ -83,7 +83,7 @@ flexdashboard::gauge(3000,min = 0,max=3500,label = "Volontaires",
 
 ------------------------------------------------------------------------
 
-Créé par la loi du 10 mars 2010, le *service civique* est un engagement *volontaire* au service de l'intérêt général, parce que chaque individu a quelque chose à apporter à la collectivité. Il s'adresse aux jeunes de *16 à 25 ans*, et jusqu'à 30 ans pour les jeunes en situation de handicap, et sans condition de diplôme. Les volontaires ne sont pas rémunérés puisque le service civique n'est pas un emploi. Ils sont indemnisés à hauteur de 580,55 € net par mois, dont 472,97 € sont pris en charge par l'État et 107,58 € par la structure d'accueil. Les missions s'effectuent pendant 6 à 12 mois et sur une durée hebdomadaire de 24h à 48h, réparties sur 6 jours maximum. Elles peuvent avoir lieu dans des associations, des établissement publics, des services de l'Etat ou encore dans des collectivités territoriales.
+Créé par la loi du 10 mars 2010, le **service civique** est un engagement **volontaire** au service de l'intérêt général, parce que chaque individu a quelque chose à apporter à la collectivité. Il s'adresse aux jeunes de **16 à 25 ans**, et jusqu'à 30 ans pour les jeunes en situation de handicap, et sans condition de diplôme. Les volontaires ne sont pas rémunérés puisque le service civique n'est pas un emploi. Ils sont indemnisés à hauteur de 580,55 € net par mois, dont 472,97 € sont pris en charge par l'État et 107,58 € par la structure d'accueil. Les missions s'effectuent pendant 6 à 12 mois et sur une durée hebdomadaire de 24h à 48h, réparties sur 6 jours maximum. Elles peuvent avoir lieu dans des associations, des établissement publics, des services de l'Etat ou encore dans des collectivités territoriales.
 
 ### évolution annuelle des missions et volontaires
 
