--- a/3.2_SC.Rmd
+++ b/3.2_SC.Rmd
@@ -387,7 +387,7 @@ leaflet() %>%
 ### Flux annuels
 
 [![](images/fluxSC.PNG)</br>\
-flux de nouveaux volontaires par année](https://pierre-stephanelebre.shinyapps.io/fluxSC/)
+flux de nouveaux volontaires par année](https://pierre-stephanelebre.shinyapps.io/fluxSC/){target="_blank}
 
 ------------------------------------------------------------------------
 
