--- a/3.2_SC.Rmd
+++ b/3.2_SC.Rmd
@@ -66,7 +66,7 @@ tab_sc <- function(.tbl){
 <center>
 ```{r}
 flexdashboard::gauge(3100,min = 0,max=3500,label = "Missions",
-      gaugeSectors(colors = "orange"))
+                     abbreviate=FALSE, gaugeSectors(colors = "orange"))
 ```
 </center>
 </div>
@@ -75,7 +75,7 @@ flexdashboard::gauge(3100,min = 0,max=3500,label = "Missions",
 <center>  
 ```{r}
 flexdashboard::gauge(3000,min = 0,max=3500,label = "Volontaires",
-      gaugeSectors(colors = "aqua") )
+                     abbreviate=FALSE, gaugeSectors(colors = "#b0c4de") )
 ```
 </center>
 </div>
