--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -681,14 +681,14 @@ Le modèle a été lissé selon un spline de régression cubique et une précisi
 > schématisation
 
 [![](images/GAM.png){height=500px} </br>\
-Analyse de la dotation des territoires](https://pierre-stephanelebre.shinyapps.io/ANS_carence/){target="_blank}
+Analyse de la dotation des territoires](https://pierre-stephanelebre.shinyapps.io/ANS_carence/){target="_blank"}
 
 # *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
 
 
 **Sources :**
 
--   Injep, MEDES, recensement des "licences et des clubséquipements sportifs (RES)
+-   Injep, MEDES, Recensement des licences et des clubs sportifs  ; Recensement des équipements sportifs (RES)
 
     -   <https://equipements.sports.gouv.fr/pages/accueil/>
     -   <https://carto-stats.injep.fr/#c=home>
